# Chess

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  functions.c  game.cpp  header.h  main.c
.github/workflows/: .travis.yml
include/: config.h.in
src/: ChessImplementation.cpp  ChessInterface.hpp  Makefile  Makefile.am  Makefile.in  game.cpp
src/.deps/: ChessImplementation.Po  game.Po
