AUTOMAKE_OPTIONS = foreign
# what flags you want to pass to the compiler & linker
CFLAGS = -I -Wall
AM_LDFLAGS =
# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = game
game_SOURCES = src/game.cpp src/ChessImplementation.cpp include/ChessInterface.hpp
